--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-  "id": "extract-url",
-  "name": "Extract url content",
-  "version": "0.2.0",
-  "description": "Extract url converting content into markdown",
+  "id": "todo-txt",
+  "name": "Todo.txt support",
+  "version": "0.1.0",
+  "description": "Native support for todo.txt files",
   "author": "Stephen Solka",
   "authorUrl": "https://github.com/trashhalo",
   "isDesktopOnly": false
